--- a/demo/public/index.css
+++ b/demo/public/index.css
@@ -15,7 +15,7 @@ body {
 
 .page {
     position: relative;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -23,15 +23,18 @@ body {
 }
 
 .background-video-wrapper {
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
+    display: flex; 
+    height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
 }
 
 .background-video {
     position: fixed;
     min-width: 100vw;
     min-height: 100vh;
+    filter: brightness(70%) blur(5px);
 }
 
 .clock-wrapper {
@@ -67,13 +70,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 280px;
 }
 
 .split-screen > *:first-child {
     /* background-color: rgba(255,0,0,0.2); */
     /* max-width: 60vw; */
     max-width: 60vw;
+    padding: 20px;
 }
 
 .split-screen > *:last-child {
@@ -82,12 +85,10 @@ body {
 
 .about-container {
     font-family: 'Roboto', sans-serif;
-    /* flex-grow: 1; */
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    min-width: 400px;
 }
 
 .text-wrapper {
@@ -124,20 +125,28 @@ body {
     color: white;
 }
 
-.name {
-    font-size: 1.5em;
-    color: orange;
-}
 
-.contact-container > * {
-    min-width: 200px;
-    max-width: 300px;
-    flex-grow: 1;
-}
+@media (max-width: 1000px){
+    .split-screen {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 100vw;
+    }
 
-.details {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+    .split-screen > *:first-child {
+        /* background-color: rgba(255,0,0,0.2); */
+        /* max-width: 60vw; */
+        max-width: 90vw;
+        max-height: 50vh;
+        height: 50%;
+        width: 80%;
+    }   
 
+    .about-container {
+        justify-content: center;
+        align-items: center;
+    }
+    
+}
