--- a/demo/public/index.css
+++ b/demo/public/index.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    
+    font-family: 'Roboto', sans-serif;
 }
 
 .page-container {
@@ -20,6 +22,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .background-video-wrapper {
@@ -59,6 +62,7 @@ body {
 .split-screen {
     width: 100%;
     height: 100%;
+    max-width: 1200px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -116,15 +120,17 @@ body {
     font-weight: 100;
 }
 
-.contact-container {
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    
+.row {
     color: white;
 }
 
+.card {
+    min-width: 200px !important;
+    margin: 20px;
+    background-color: rgba(255,255,255,0.1) !important;
+    border-radius: 20px !important;
+    padding: 10px !important;
+}
 
 @media (max-width: 1000px){
     .split-screen {
@@ -148,5 +154,4 @@ body {
         justify-content: center;
         align-items: center;
     }
-    
 }
